# swapi_dataplatform

./: README.md  dlt_test.duckdb  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/core/: DIM_APPEARANCES.sql  DIM_APPEARANCES.yml  DIM_CHARACTER_APPEARANCES.sql  DIM_CHARACTER_APPEARANCES.yml
dbt/models/staging/: STG_APPEARANCES.sql  STG_APPEARANCES.yml  STG_CHARACTERS.sql  STG_CHARACTERS.yml  STG_FILMS.sql  STG_FILMS.yml
dlt/: dlt_test.py  swapi_dlt.py
models/: sources.yml
models/staging/: schema.yml  stg_films.sql
models_draft/staging/: schema.yml
python/: loop_skywalker.py
swapi_dataplatform/: api_wan.py  extract_load_raw.py  r2db.py
swapi_dbt/models/: sources.yml
swapi_dbt/models/core/: DIM_FILMS.sql  DIM_FILMS.yml  DIM_FILM_CHARACTERS.sql  FCT_CHARACTER_APPEARANCE_COUNTS.sql  schema.yml
swapi_dbt/models/staging/: STG_CHARACTERS.sql  STG_CHARACTERS.yml  STG_FILMS.sql  STG_FILMS.yml  schema.yml
